tdf#119019 DOCX track changes: fix invisible delete and insert

during editing in a paragraph with tracked paragraph formatting,
by accepting the old formatting change automatically in the
actual paragraph before text deletion/insertion.

Note: it's not possible to reject paragraph formatting
changes in LO, but showing them is a minimal requirement.
Now they are still visible in change tracking dialog and
by the vertical line before the related paragraphs until
there are no new text deletions and insertions there.

Change-Id: I526daad8dd96212ac73a10627128553452e4d31c