sw/source/core/doc/DocumentContentOperationsManager.cxx
@@ -2449,6 +2449,15 @@ bool DocumentContentOperationsManager::Overwrite( const SwPaM &rRg, const OUStri
 bool DocumentContentOperationsManager::InsertString( const SwPaM &rRg, const OUString &rStr,
         const SwInsertFlags nInsertMode )
 {
+    // tdf#119019 accept tracked paragraph formatting to do not hide new insertions
+    if( m_rDoc.getIDocumentRedlineAccess().IsRedlineOn() )
+    {
+        RedlineFlags eOld = m_rDoc.getIDocumentRedlineAccess().GetRedlineFlags();
+        m_rDoc.getIDocumentRedlineAccess().AcceptRedlineParagraphFormatting( rRg );
+        if (eOld != m_rDoc.getIDocumentRedlineAccess().GetRedlineFlags())
+            m_rDoc.getIDocumentRedlineAccess().SetRedlineFlags( eOld );
+    }
+
     // fetching DoesUndo is surprisingly expensive
     bool bDoesUndo = m_rDoc.GetIDocumentUndoRedo().DoesUndo();
     if (bDoesUndo)
@@ -3578,6 +3587,10 @@ bool DocumentContentOperationsManager::DeleteAndJoinWithRedlineImpl( SwPaM & rPa
             }
         }
 
+        // tdf#119019 accept tracked paragraph formatting to do not hide new deletions
+        if ( *rPam.GetPoint() != *rPam.GetMark() )
+            m_rDoc.getIDocumentRedlineAccess().AcceptRedlineParagraphFormatting( rPam );
+
         if (m_rDoc.GetIDocumentUndoRedo().DoesUndo())
         {
 
@@ -3598,6 +3611,7 @@ bool DocumentContentOperationsManager::DeleteAndJoinWithRedlineImpl( SwPaM & rPa
 
         if ( *rPam.GetPoint() != *rPam.GetMark() )
             m_rDoc.getIDocumentRedlineAccess().AppendRedline( new SwRangeRedline( nsRedlineType_t::REDLINE_DELETE, rPam ), true );
+
         m_rDoc.getIDocumentState().SetModified();
 
         if ( pUndo )
